--- a/contact.css
+++ b/contact.css
@@ -267,6 +267,34 @@ input:checked + .slider:before {
   transition: all 0.3s ease;
 }
 
+#switch {
+  height: 20px;
+  width: 20px;
+  border: 2px solid #121212;
+  background-color: transparent;
+  color: #121212;
+  padding: 1.2rem;
+  border-radius: 15px;
+  transition: all 0.5s ease-in-out; 
+  cursor: pointer;
+}
+
+body.dark #switch {
+  background-color: #ffffff;
+  color: #121212;
+  border-color: #ffffff;
+}
+
+#switch:hover {
+  background-color: #121212;
+  color: white;
+}
+
+body.dark #switch:hover {
+  background-color: #e0e0e0;
+  color: #000000;
+}
+
 body.dark .hamburger span {
   background-color: #a3bffa;
 }
