--- a/login.css
+++ b/login.css
@@ -16,9 +16,9 @@ body {
   min-height: 100vh;
   margin: 0;
   font-family: 'Poppins', sans-serif;
-  display: flex;
   flex-direction: column;
   transition: background 0.4s ease, color 0.4s ease;
+  overflow-x: hidden;
 }
 
 body.light { 
@@ -380,6 +380,14 @@ body.dark .login-section p {
   color: #bbb;
 }
 
+.error-message{
+  color: #ff4d4d;
+  margin-bottom: 15px;
+  font-size: 14px; 
+  text-align: center;
+  font-weight: 500;
+}
+
 /* Login Form Container */
 .login-form-container {
   max-width: 500px;
@@ -580,7 +588,7 @@ body.dark .register-link-container {
 footer {
   flex-shrink: 0;
   width: 100%;
-  padding: 30px 20px;
+  padding: 30px 0;
   text-align: center;
   background: linear-gradient(135deg, #2652c0, #1ee9c0);
   color: white;
