--- a/about.css
+++ b/about.css
@@ -173,8 +173,15 @@ body.dark .nav-links a:hover{
 }
 
 body.dark #login-btn {
-  color: #a3bffa;
+  color: white;
+  background-color: #000000;
   border-color: #a3bffa;
+}
+
+body.light #register-btn {
+  color: black;
+  background-color: white;
+  border-color: #a3bffa
 }
 
 #login-btn:hover {
