--- a/login.css
+++ b/login.css
@@ -15,7 +15,10 @@ body {
   flex-direction: column;
   min-height: 100vh;
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
   flex-direction: column;
   transition: background 0.4s ease, color 0.4s ease;
   overflow-x: hidden;
@@ -227,26 +230,22 @@ input:checked + .slider:before {
   display: none;
   width: 46px;
   height: 30px;
-
   flex-direction: column;
   justify-content: space-between;
-
   background: none;
   border: none;
   cursor: pointer;
-
-  margin-left: auto; 
-
+  margin-left: auto;
   z-index: 1001;
 }
 
 .hamburger span {
   height: 4px;
   width: 100%;
-  justify-content: space-between;
   background-color: #2652c0;
   border-radius: 2px;
   transition: all 0.3s ease;
+  display: block;
 }
 
 body.dark .hamburger span {
@@ -259,7 +258,6 @@ body.dark .hamburger span {
 
 .hamburger.active span:nth-child(2) {
   opacity: 0;
-  transform: translateX(20px);
 }
 
 .hamburger.active span:nth-child(3) {
@@ -285,16 +283,14 @@ body.dark .hamburger span {
 
 body.dark .mobile-menu {
   background: #222222;
-  box-shadow: -5px 0 15px rgba(0, 0, 0, 0.3);
 }
 
 .mobile-menu.active {
   right: 0;
-  
 }
 
 .mobile-menu-links {
-  display: flex; 
+  display: flex;
   flex-direction: column;
   gap: 25px;
 }
@@ -309,41 +305,48 @@ body.dark .mobile-menu {
   transition: color 0.3s ease;
 }
 
-body.dark .mobile-menu-links a {
-  color: #cbd5e0;
-  border-bottom-color: #333333;
-}
-
 .mobile-menu-links a:hover {
   color: #667eea;
 }
 
-.mobile-auth-buttons {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  margin-top: 20px;
+.mobile-menu .mobile-auth-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    
+    gap: 15px;
+    
+    width: 100%;
+    height: auto;
+    
+    
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
-.mobile-auth-buttons button {
-  padding: 14px;
-  border-radius: 6px;
-  font-weight: 600;
-  font-size: 17px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  border: none;
+.mobile-menu .mobile-auth-buttons button,
+.mobile-menu .mobile-auth-buttons a {
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 0;
+    
+    height: 25px;
+    width: 80px;
+    border-radius: 20px;
+    text-decoration: none;
+
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-#mobile-login-btn {
-  background: transparent;
-  color: #667eea;
-  border: 2px solid #667eea;
-}
-
-#mobile-register-btn {
-  background: linear-gradient(135deg, #2652c0, #1ee9c0);
-  color: white;
+.mobile-menu .mobile-auth-buttons button{
+   background: linear-gradient(to right , #2652c0, #1ee9c0);
+   border-color: black;
 }
 
 /* ==================== 3. Login Page ==================== */
